<resources>
    <string name="app_name">SisBus-App</string>
    <string name="appSplash">SisBus</string>

    <!-- Strings related to login -->
    <string name="bemVindo">Bem-Vindo</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="textEsqueceuSenha">Esqueceu sua senha?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_maps">Map</string>
    <string name="abrirChamado">Abrir Chamado</string>

    <string name="localizacaoAtual">Localização atual</string>
    <string name="localizacao">Localização</string>
    <string name="numero">Número</string>
    <string name="referencia">Referência</string>
    <string name="observacao">Observações</string>
    <string name="codigoVeiculo">Código do veículo</string>
    <string name="solicitar">Enviar solicitação</string>
    <string name="prioridade">Prioridade</string>
    <string name="title_activity_menu_drawer">MenuDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="tituloStatus">Acompanhamento de Chamados</string>

</resources>
